--- a/src/css/styleRP.css
+++ b/src/css/styleRP.css
@@ -1,66 +1,6 @@
-   @charset "utf-8";
-   /* CSS Document */
-   /*Pagina Centralizada*/
-   
-   body {
-       overflow-x: hidden;
-   }
-   
-   .header-background {
-       background-color: rgb(221, 214, 214);
-   }
-   /*logo e nome*/
-   
-   #container {
-       display: inline;
-       position: relative;
-       text-align: center;
-       text-decoration: none
-   }
-   
-   #container h2 {
-       display: inline;
-       position: relative;
-       font-family: 'Anton', Serif;
-       font-size: 100px;
-       color: black;
-       left: 80px;
-       text-align: center;
-       top: -100px;
-   }
-   /* Menu*/
-   
-   #menu {
-       background-color: rgb(221, 214, 214);
-   }
-   
-   #menu ul {
-       font-family: 'Lato', serif;
-       font-size: 24px;
-       padding: 10px;
-       margin: 10px;
-       list-style: none;
-   }
-   
-   #menu ul li {
-       display: inline;
-   }
-   
-   #menu ul li a {
-       padding: 10px 40px;
-       display: inline-block;
-       /* visual do link */
-       background-color: rgb(221, 214, 214);
-       color: black;
-       text-decoration: none;
-       border-bottom: 3px solid white;
-   }
-   
-   #menu ul li a:hover {
-       background-color: #D6D6D6;
-       color: #6D6D6D;
-       border-bottom: 3px solid black;
-   }
+.card-largura{
+    max-width: 18rem;
+}
    
    p#id1 {
        font-family: 'Abel', serif;
@@ -78,25 +18,15 @@
        text-align: center;
    }
    
-   #ul {
-       list-style-position: inside;
-       display: inline-table;
-   }
-   
-   #ul li {
-       font-family: 'Abel', serif;
-       font-size: 18px;
-       text-align: center;
-   }
-   
+
    #historia {
        text-align: center;
    }
    
    #historia p {
        text-align: justify;
-       padding-left: 20%;
-       padding-right: 20%;
+       padding-left: 10%;
+       padding-right: 10%;
    }
    
    
@@ -154,7 +84,8 @@
        font-weight: normal;
    }
 
-   .imagem-carrossel-um{
+
+.imagem-carrossel-um{
     object-fit: cover;
     object-position: 0 25%;
     height: 700px;
@@ -163,4 +94,10 @@
 .imagem-carrossel-dois{
     object-fit: cover;
     height: 700px;
+}
+
+.card-posicao-imagem {
+    object-fit: cover;
+    height: 200px;
+    width: 288px;
 }
